# modelforecast

./: .gitignore  .gitmodules  ARCHITECTURE_CONTRACT.json  CLAUDE.md  CONTRIBUTING.md  HEADLINE.md  LICENSE  METHODOLOGY.md  PHASE3_RESULTS.md  README.md  RESOURCE_MANIFEST.json  debug_grok_l3.py  pyproject.toml  test_grok_l3_fix.py  test_grok_l3_specific_choice.py
.github/: PULL_REQUEST_TEMPLATE.md
analysis/: .gitkeep
archive/: GROK_L3_FIX_REPORT.md  RESULTS_SUMMARY.txt  test_grok_l3_final.py
arena/: README.md
articles/: .gitkeep
docs/: COREWARS.md  EMBEDDINGS_BRIEFING.md  LLM_GAME_PLAYER_TESTING.md  LLM_INTERVENTION_PROTOCOL_ANALYSIS.md  MODELFORECAST_UNIFIED_DESIGN.md  index.html  play.html
experiments/: grok_l3_fix.py
games/: README.md
notebooks/: colab_tpu_gpu_benchmark.ipynb  cross_hardware_serving.ipynb
results/: .gitkeep  RESULTS.md  alibaba_tongyi-deepresearch-30b-a3b_free__level_0.json  amazon_nova-2-lite-v1_free__level_0.json  anthropic_claude-haiku-4-5__level_0.json  anthropic_claude-haiku-4-5__level_2.json  anthropic_claude-haiku-4-5__level_4.json  anthropic_claude-opus-4-5__level_0.json  anthropic_claude-opus-4-5__level_3.json  anthropic_claude-opus-4-5__level_4.json  anthropic_claude-sonnet-4-5__level_0.json  anthropic_claude-sonnet-4-5__level_1.json  anthropic_claude-sonnet-4-5__level_2.json  cognitivecomputations_dolphin-mistral-24b-venice-edition_free__level_0.json  deepseek_deepseek-v3-2-exp__level_0.json  deepseek_deepseek-v3-2-exp__level_1.json  google_gemini-2-0-flash-exp_free__level_0.json  google_gemini-3-pro-preview__level_0.json  (+65 more)
(+361 files in other folders)
