[project]
name = "modelforecast"
version = "0.1.0"
description = "Check the forecast before you deploy. Tool-calling capability benchmarks for free LLM models."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "jw409", email = "jw409@users.noreply.github.com"}
]
keywords = ["llm", "benchmark", "tool-calling", "openrouter", "free-models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jw409/modelforecast"
Repository = "https://github.com/jw409/modelforecast"
Issues = "https://github.com/jw409/modelforecast/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelforecast"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
